# zaik

./: .gitignore  AI_AGENTS_README.md  Cargo.toml  README.md  ai_agent_demo.py  build.rs  enhanced_ai_demo.py  requirements.txt  run_ai_test.sh  run_ai_workflow.py  run_demo.sh  setup_ai_agents.sh  simple_ai_test.py  test_data.csv  test_data_large.csv  test_integration.py
ai_agents/: agent_workflow.py  enhanced_workflow.py  openai_client.py  risc0_verifier.py  specialized_agents.py
host/: Cargo.toml
host/src/: main.rs  snark_invariant.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
src/: ai_agent.rs  lib.rs  snark_circuit.rs  snark_prover.rs
